# kphis-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  WIP.md  cargo-test-api.bat  cargo-test-api.sh  cargo-test-pdf.bat  cargo-test-pdf.sh  cargo-test-sql.bat  cargo-test-sql.sh  cargo-test-wasm.bat  cargo-test-wasm.sh  cargo-test.bat  cargo-test.sh  cargo-tree.bat  css-bundle.bat  css-bundle.sh  docker-build-bundle.sh  docker-build.bat  docker-build.sh  docker-desktop-build-bundle.bat  docker-wsl-build-bundle.bat  precomp-dev.bat  precomp-dev.sh  precomp.bat  precomp.sh  reload.bat  reload.sh  rustfmt.toml  serve.bat  serve.sh  tutorial-build.bat  tutorial-build.sh  typst.md  wasm.bat  wasm.sh
crates/benches/: Cargo.toml  README.md
crates/benches/dump/: i10-index.dump  i10tm-noex.dump
crates/benches/src/: main.rs  search.rs
crates/dump-builder/: Cargo.toml  README.md  TDS6307_EXCLUDES.md
crates/dump-builder/raw-grouper/: book2.txt  ccex.csv  dagger-asterisk.csv  dc-pcl-drg.csv  dcl-eq.csv  drg.csv  i10.csv  i9vx.csv  mdc-ax.csv  mdc-pax.csv  mdc-pdc.csv  mdc-ppdc.csv  proc.csv
crates/dump-builder/raw-highlight/: JSON.sublime-syntax  My.tmTheme  SQL.sublime-syntax  sql.txt
crates/dump-builder/raw-icd-tm/: icd-10-tm2016-20210805-original.csv  icd-10-tm2016-20210805.csv
crates/dump-builder/raw-icd-who/: icd1-tm-extra-note.md  icd102016en-book3-raw.txt  icd102016en-book3-tm.txt  icd102016en-book3.txt  icd10tm-extra.xml  index.html
crates/dump-builder/raw-icd9cm/: book.txt
crates/dump-builder/src/: drg_grouper.rs  highlight.rs  i10_claml.rs  i10_index.rs  i9_cm.rs  lib.rs
crates/kphis-api-core/: Cargo.toml  README.md
crates/kphis-api-core/src/: lib.rs  open_api.rs  pdf.rs  scalar.rs  state.rs  token.rs  utils.rs
crates/kphis-api-handler/: Cargo.toml  README.md
crates/kphis-api-handler/src/: app.rs  avatar.rs  drug_use_duration.rs  emr.rs  ipd.rs  lab.rs  lib.rs  med_reconciliation.rs  pacs.rs  post_admit.rs  pre_admit.rs  pre_order.rs  prescription.rs  refer_note.rs  refer_out.rs  report.rs  sse.rs  user.rs  xray.rs
crates/kphis-api-pacs/: Cargo.toml  README.md
crates/kphis-api-pacs/src/: agent_api.rs  lib.rs  synapse.rs
crates/kphis-api-pdf/: Cargo.toml  README.md
crates/kphis-api-pdf/src/: actor.rs  bundle_data.rs  handler.rs  json_data.rs  lib.rs  test_state.rs
crates/kphis-api-pdf/tests/: create_reports.rs
crates/kphis-api-query/: Cargo.toml  README.md
crates/kphis-api-query/src/: app.rs  assets.rs  avatar.rs  binder.rs  drug_use_duration.rs  emr.rs  image.rs  lab.rs  lib.rs  log.rs  med_reconciliation.rs  opd_er.rs  post_admit.rs  pre_admit.rs  pre_order.rs  prescription.rs  query_utils.rs  refer_note.rs  refer_out.rs  report.rs  schema_update.rs  select_utils.rs  sse.rs  transform.rs  user.rs  xray.rs
crates/kphis-api-router/: Cargo.toml  README.md
crates/kphis-api-router/src/: doc.rs  lib.rs  route.rs
crates/kphis-api-router/tests/: all_not_and_login.rs  all_query_params.rs  image_path.rs  returning_check.rs  user.rs
crates/kphis-backend/: Cargo.toml  README.md
crates/kphis-backend/src/: main.rs
crates/kphis-db-util/: Cargo.toml  README.md
crates/kphis-db-util/src/: main.rs
crates/kphis-drg-worker/: Cargo.toml  README.md
crates/kphis-drg-worker/dump/: i10-claml.dump  i10-index.dump
crates/kphis-drg-worker/src/: drg.rs  i10.rs  lib.rs
crates/kphis-frontend/: Cargo.toml  README.md
crates/kphis-frontend/src/: lib.rs  router.rs
crates/kphis-model/: Cargo.toml  README.md
crates/kphis-model/src/: antibiogram.rs  app.rs  avatar.rs  claim.rs  dc_plan.rs  drug_use_duration.rs  emr.rs  endpoint.rs  fetch.rs  focus_list.rs  focus_note.rs  image.rs  index_action.rs  index_monitor.rs  index_plan.rs  ipd.rs  lab.rs  lib.rs  med_reconcile.rs  opd_er.rs  order.rs  pacs.rs  patient_info.rs  post_admit.rs  pre_admit.rs  pre_order.rs  prescription.rs  progress_note.rs  refer_note.rs  refer_out.rs  report.rs  route.rs  score.rs  search.rs  select_utils.rs  shift.rs  sse.rs  tab.rs  timer.rs  transform.rs  (+3 more)
crates/kphis-sql/: Cargo.toml  README.md
crates/kphis-sql/src/: avatar.rs  data_history_utils.rs  drug_use_duration.rs  emr.rs  image.rs  ipd.rs  lab.rs  lib.rs  log.rs  med_reconciliation.rs  opd_er.rs  post_admit.rs  pre_admit.rs  pre_order.rs  prescription.rs  query_utils.rs  refer_note.rs  refer_out.rs  report.rs  schema_update.rs  search.rs  select_utils.rs  sse.rs  transform.rs  user.rs  xray.rs
crates/kphis-sqlx-tester/: Cargo.toml  README.md
crates/kphis-sqlx-tester/src/: lib.rs
crates/kphis-typst-worker/: Cargo.toml  README.md
crates/kphis-typst-worker/src/: lib.rs  runtime.rs
crates/kphis-ui-app/: Cargo.toml  README.md
crates/kphis-ui-app/src/: lib.rs
crates/kphis-ui-component/: Cargo.toml  README.md
crates/kphis-ui-component/src/: admission_note.rs  doctor_in_charge.rs  document.rs  emr.rs  index_plan.rs  io.rs  ipd_consult.rs  ipd_pre_order.rs  lab.rs  lib.rs  med_reconcile.rs  menu.rs  modal.rs  mra.rs  nurse_note.rs  opd_er_emergency.rs  opd_er_medical_history.rs  order.rs  order_form.rs  refer_out.rs  show_patient_main.rs  summary_note.rs  vital_sign.rs  xray.rs
crates/kphis-ui-core/: Cargo.toml  README.md
crates/kphis-ui-core/src/: binding.rs  class.rs  datetime_pickers.rs  doms.rs  draggable.rs  highlight.rs  lib.rs  mixins.rs  pannable.rs  popups.rs  resizable.rs  token.rs
crates/kphis-ui-page/: Cargo.toml  README.md
crates/kphis-ui-page/src/: drug_use_duration.rs  image.rs  index.rs  index_plan.rs  info.rs  ipd_admission_note_dr.rs  ipd_admission_note_nurse.rs  ipd_consult_list.rs  ipd_main.rs  ipd_mra.rs  ipd_order_pharmacy.rs  ipd_post_admit_list.rs  ipd_pre_admit_list.rs  ipd_pre_order_list.rs  ipd_pre_order_main.rs  ipd_search_patient_dr.rs  ipd_search_patient_nurse.rs  ipd_search_patient_other.rs  ipd_search_patient_pharmacist.rs  ipd_summary_audit.rs  lib.rs  not_found.rs  opd_er_main.rs  opd_er_order_list.rs  permission_list.rs  (+10 more)
crates/kphis-util/: Cargo.toml  README.md
crates/kphis-worker/: Cargo.toml  README.md
crates/wasm-tests/: Cargo.toml  README.md
(+1015 files in other folders)
