[package]
name = "benches"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = "README.md"

[dependencies]
dump-builder = { workspace = true }
kphis-drg-worker = { workspace = true }
kphis-util = { workspace = true }

bitcode = { workspace = true }
csv = { workspace = true }