[package]
name = "kphis-api-handler"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = "README.md"

[dependencies]

# workspace crate
kphis-api-core = { workspace = true }
kphis-api-pacs = { workspace = true }
kphis-api-query = { workspace = true }
kphis-model = { workspace = true }
kphis-util = { workspace = true }

# from workspace
argon2 = { workspace = true }
axum = { workspace = true }
hex = { workspace = true }
http-body-util = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-cookies = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
urlencoding = { workspace = true }

# OpenApi
utoipa = { workspace = true }
