[package]
name = "kphis-api-router"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = "README.md"

[dependencies]

# workspace crate
kphis-api-core = { workspace = true }
kphis-api-handler = { workspace = true }
kphis-api-pdf = { workspace = true }
kphis-model = { workspace = true }
kphis-util = { workspace = true }

# from workspace
axum = { workspace = true }
axum-prometheus = { workspace = true }
time = "0.3"
tokio = { workspace = true }
tower-cookies = { workspace = true }
tower_governor = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }

# OpenApi
utoipa = { workspace = true }

[dev-dependencies]
axum-test = "21"
http-body-util = { workspace = true }
kphis-sqlx-tester = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
web-sys = { workspace = true }
