[package]
name = "kphis-sql"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = "README.md"

[dependencies]

# workspace crate
kphis-model = { workspace = true }
kphis-util = { workspace = true }

# from workspace
time = { workspace = true }
urlencoding = { workspace = true }
