[package]
name = "kphis-ui-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

# workspace crate
kphis-model = { workspace = true }
kphis-util = { workspace = true }

# from workspace
base64 = { workspace = true }
discard = { workspace = true }
dominator = { workspace = true }
futures-signals = { workspace = true }
js-sys = { workspace = true }
log = { workspace = true }
pasetors = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
syntect = { workspace = true }
time = { workspace = true }
time-datepicker-core = { workspace = true }
typst-syntax = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "DomParser",
    "DomRect",
    "Element",
    "Event",
    "EventTarget",
    "HtmlButtonElement",
    "HtmlDivElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "SupportedType",
]}

[dev-dependencies]
rstest = { workspace = true }